--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              </ul>
          </div>
          <div class="logo-box-center cell text-center">
-             <a href="#" class="block"><img src="./img/logo_diptyque_2 복사본.png.webp" alt=""></a>
+             <a href="#" class="block"><img src="./img/logo.png" alt=""></a>
          </div>
          <div class="logo-box right cell-r">
              <ul class="row">
